@@ -45,6 +45,10 @@ signal: {
 // plugin must be mapped to a configuration group, even if it accepts no
 // configuration.
 plugins: {
+  aqi: {
+    // grab a token easily from: https://aqicn.org
+    token = "blah";
+  };
   emote: {};
   greet: {};
   help: {};
